[package]
name = "adam_fov_rs"
description = "A rust implementation of Adam Milazzo's FOV algorithm http://www.adammil.net/blog/v125_Roguelike_Vision_Algorithms.html#mine"
version = "0.4.0"
edition = "2021"
authors = ["sark", "Adam Milazzo"]
homepage = "https://github.com/sarkahn/adam_fov_rs"
repository = "https://github.com/sarkahn/adam_fov_rs"
license = "MIT"
readme = "README.md"
keywords = ["fov", "field-of-view", "roguelike", "2d"]

[dependencies.glam]
version = "0.30.7"

[dev-dependencies]
rand = "0.8.4"
bevy_ascii_terminal = "0.18.3"
bevy = {version = "0.18", default-features = false, features = ["bevy_winit", "bevy_window"]}
