[package]
name = "adam_fov_rs"
description = "A rust implementation of Adam Milazzo's FOV algorithm http://www.adammil.net/blog/v125_Roguelike_Vision_Algorithms.html#mine"
version = "0.4.0"
edition = "2024"
authors = ["sark", "Adam Milazzo"]
homepage = "https://github.com/sarkahn/adam_fov_rs"
repository = "https://github.com/sarkahn/adam_fov_rs"
license = "MIT"
readme = "README.md"
keywords = ["fov", "field-of-view", "roguelike", "2d"]

[dependencies.glam]
version = "0.32.0"

[dev-dependencies]
rand = "0.8.4"

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "99d2e972d06a3a688aa1ebca6ce5759d784821c5"
default-features = false
features = ["bevy_winit", "x11", "bevy_window"]

[dev-dependencies.bevy_ascii_terminal]
git = "https://github.com/sarkahn/bevy_ascii_terminal"
rev = "071725307e0b1a93e87f499f26d532fa27717834"